Bug 437750 New message still return preferred format window when we use "additional email" address. r=Standard8,sr=bienvenu